<resources>
    <string name="app_name">WeatherAppKotlin</string>
    <string name="internet_connection_error">No Internet connection. Weather data load from cache</string>
    <string name="data_getting_error">Data Error</string>
    <string name="data_getting_message">No Internet connection and weather data in cache</string>
    <string name="close_app">Close App</string>
    <string name="country_header">Country:</string>
    <string name="city_header">City:</string>
    <string name="temperature_header">Temperature:</string>
    <string name="pressure_header">Pressure:</string>
    <string name="wind_speed_header">Wind speed:</string>
    <string name="wind_direction_header">Wind direction:</string>
    <string name="last_update_header">Last observation time:</string>
</resources>
