<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialog_padding"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/country_header"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/city_header"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_city_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/temperature_header"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/pressure_header"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/wind_speed_header"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/text_padding"/>
            <TextView
                android:id="@+id/tv_wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/text_padding"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/text_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/wind_direction_header"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/text_padding"/>
            <TextView
                android:id="@+id/tv_wind_direction_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/text_padding"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/last_update_header"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_last_update_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/tv_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
        <TextView
            android:id="@+id/tv_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/text_padding"/>
    </LinearLayout>

</LinearLayout>